--- a/FlaskWebProject1/templates/layout.html
+++ b/FlaskWebProject1/templates/layout.html
@@ -34,7 +34,7 @@
         {% block content %}{% endblock %}
         <hr />
         <footer>
-            <p>&copy; {{ year }} - My Flask Application</p>
+            <p>&copy; {{ year }} - zenonpa was here</p>
         </footer>
     </div>
 
