--- a/FlaskWebProject1/templates/layout.html
+++ b/FlaskWebProject1/templates/layout.html
@@ -22,9 +22,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('home') }}">Home</a></li>
-                    <li><a href="{{ url_for('about') }}">About</a></li>
-                    <li><a href="{{ url_for('contact') }}">Contact</a></li>
+                    <li><a href="{{ url_for('home') }}">Inicio</a></li>
+                    <li><a href="{{ url_for('about') }}">Acerca de</a></li>
+                    <li><a href="{{ url_for('contact') }}">Contacto</a></li>
                 </ul>
             </div>
         </div>
