--- a/FlaskWebProject1/templates/index.html
+++ b/FlaskWebProject1/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1>Bienvenidos a mi Python Page</h1>
+    <h1>Pagina de bienvenida</h1>
     <p class="lead">Flask is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://flask.pocoo.org/" class="btn btn-primary btn-large">Sepa más &raquo;</a></p>
 </div>
